Fix overflowing label

--- a/src/styles/components/forms/textbox/_default.scss
+++ b/src/styles/components/forms/textbox/_default.scss
@@ -77,6 +77,10 @@
     letter-spacing: 0.5px;
     color: $mc-color-gray-500;
     pointer-events: none; // let react handle states
+    white-space: nowrap;
+    max-width: calc(100% - (2 * #{$input-padding}));
+    overflow: hidden;
+    text-overflow: ellipsis;
     transform-origin: 0 50%;
     transition:
       transform 320ms ease 100ms,
